kube/smartbch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: smartbch
    version: 0.3.0
  name: smartbch
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      service: smartbch
  template:
    metadata:
      labels:
        service: smartbch
    spec:
      containers:
      - args:
        - start
        - --mainnet-genesis-height=698502
        command:
        - smartbchd
        image: zquestz/smartbch:mainnet
        imagePullPolicy: Always
        name: smartbch
        volumeMounts:
          - mountPath: /root/.smartbchd
            name: smartbch-data
        resources:
          requests:
            memory: "1Gi"
        ports:
          - name: api
            containerPort: 8545
          - name: websocket
            containerPort: 8546
      restartPolicy: Always
      volumes:
        - name: smartbch-data
          gcePersistentDisk:
            pdName: smartbch-data
            fsType: ext4
