kube/smartbch-secondary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: smartbch
    version: 0.3.4
    deploy: smartbch-2
  name: smartbch-secondary
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      service: smartbch
      deploy: smartbch-2
  template:
    metadata:
      labels:
        service: smartbch
        deploy: smartbch-2
    spec:
      containers:
      - args:
        - start
        - --mainnet-genesis-height=698502
        command:
        - ./smartbchd
        image: zquestz/smartbch:0.3.4
        imagePullPolicy: Always
        name: smartbch
        volumeMounts:
          - mountPath: /root/.smartbchd
            name: smartbch-secondary-data
        resources:
          requests:
            memory: "7Gi"
          limits:
            memory: "7Gi"
        ports:
          - name: api
            containerPort: 8545
          - name: websocket
            containerPort: 8546
          - name: peer
            containerPort: 26656
      restartPolicy: Always
      terminationGracePeriodSeconds: 600
      volumes:
        - name: smartbch-secondary-data
          gcePersistentDisk:
            pdName: smartbch-secondary-data
            fsType: ext4
