kube/smartbch-peer-srv.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/network-tier: Standard
  name: smartbch-peer
  namespace: default
spec:
  ports:
    - name: peer
      port: 26656
      targetPort: 26656
  selector:
    deploy: smartbch-1
  type: LoadBalancer
  externalTrafficPolicy: Local
