kube/smartbch-peer2-srv.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/network-tier: Standard
  name: smartbch-peer2
  namespace: default
spec:
  ports:
    - name: peer
      port: 26656
      targetPort: 27656
  selector:
    deploy: smartbch-2
  type: LoadBalancer
  externalTrafficPolicy: Local
