kube/smartbch-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: smartbch
  namespace: default
spec:
  ports:
    - name: api
      port: 105
      targetPort: 8545
    - name: websockets
      port: 106
      targetPort: 8546
  selector:
    service: smartbch
  type: NodePort
