kube/smartbch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartbch-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
    - smartbch.greyh.at
    secretName: smartbch-tls
  defaultBackend:
    service:
      name: smartbch
      port:
        number: 105
  rules:
  - host: smartbch.greyh.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: smartbch
            port:
              number: 105
