kube/smartbch-wss-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smartbch-wss-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: '90'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '90'
spec:
  tls:
  - hosts:
    - smartbch-wss.greyh.at
    secretName: smartbch-wss-tls
  backend:
    serviceName: smartbch
    servicePort: 106
  rules:
  - host: smartbch-wss.greyh.at
    http:
      paths:
      - path: /
        backend:
          serviceName: smartbch
          servicePort: 106
